--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-scroll-to-top": "^3.0.0",
     "react-simple-typewriter": "^4.0.5",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.0.8",
