--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scroll-to-top": "^3.0.0",
     "react-simple-typewriter": "^4.0.5",
     "react-slick": "^0.29.0",
+    "react-to-print": "^2.14.7",
     "react-toastify": "^9.0.8",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
